# learning_by_doing

./: README.md  my_rviz.rviz
basic_navigation/: CMakeLists.txt  package.xml
basic_navigation/ros/config/: basic_navigation.rviz  basic_navigation_params.yaml  common_costmap_params.yaml
basic_navigation/ros/launch/: amcl.launch  basic_navigation.launch  sim.launch
basic_navigation/ros/scripts/: basic_navigation  basic_navigation_node
basic_navigation/ros/src/basic_navigation/: basic_navigation.py  global_planner_utils.py  utils.py
interactive_world_creator/: CMakeLists.txt  README.md  package.xml  setup.py
interactive_world_creator/ros/config/: creator.rviz
interactive_world_creator/ros/launch/: interactive_world_creator.launch  sim.launch
interactive_world_creator/ros/scripts/: creator
interactive_world_creator/ros/src/interactive_world_creator/: utils.py
my_simple_manipulator/: CMakeLists.txt  README.md  package.xml
my_simple_manipulator/common/include/my_simple_manipulator/: kinematics.h  pid_controller.h
my_simple_manipulator/common/src/: pid_controller.cpp
my_simple_manipulator/ros/config/: joint_controller.yaml  joints.yaml  my_robot.urdf  my_robot.xacro
my_simple_manipulator/ros/include/my_simple_manipulator/: arm_controller.h
my_simple_manipulator/ros/launch/: arm_controller.launch  sim.launch  sim_without_gazebo.launch
my_simple_manipulator/ros/scripts/: follow_cart_line  follow_cart_sine_wave  ik_test  point_pub_test  random_point_cmd  random_position_cmd  reachability  teleop_keyboard
my_simple_manipulator/ros/src/: arm_controller.cpp  arm_controller_without_gazebo.cpp  kinematics.cpp  pid_controller.cpp  test_node.cpp  youbot_kinematics.cpp
my_simple_mobile_base/: CMakeLists.txt  package.xml
my_simple_mobile_base/ros/config/: two_rooms.xacro
my_simple_mobile_base/ros/description/: laser.xacro  my_robot.xacro
my_simple_mobile_base/ros/launch/: sim.launch  sim_without_gazebo.launch
tic_tac_toe_with_robot/: CMakeLists.txt  README.md  package.xml  setup.py
tic_tac_toe_with_robot/common/tic_tac_toe_with_robot/: aruco_marker_testing.py  basic_camera.py  board.py  board_perceiver.py  determine_cross_or_circle.py  homography.py  player.py  template_matching.py  test.py
tic_tac_toe_with_robot/ros/config/: calibration.yaml  joint_angles.yaml  perception_config.yaml  tic_tac_toe.rviz
tic_tac_toe_with_robot/ros/launch/: aruco_tf_publisher.launch  play_tic_tac_toe.launch  youbot_driver.launch
tic_tac_toe_with_robot/ros/scripts/: arm_testing.py  aruco_tf_pub  tic_tac_toe_player
